# gold-splitter-examples

./: .gitignore  .pre-commit-config.yaml  EXPERIMENT_DETAILS.md  README.md  cifar10_experiment.py  example_usage.sh  mypy.ini  pyproject.toml  requirements.txt
conf/: config.yaml
image_classification_cifar10/: README.md  cifar10_experiment.py  data.py  model.py  unit_tests.py  utils.py
image_classification_cifar10/config/: config.yaml
image_classification_cifar10/run/: cifar10_all.sh  cifar10_cnn.sh  cifar10_cnn_dup_0_1.sh  cifar10_cnn_half_no_dup.sh  cifar10_resnet.sh  cifar10_resnet_dup_0_1.sh  cifar10_vit.sh  cifar10_vit_dup_0_1.sh  dinov3small_224.sh  dinov3small_224_all.sh  dinov3small_224_both.sh  dinov3small_224_both_on_test.sh  dinov3small_224_gold.sh  dinov3small_224_random.sh
image_classification_cifar10/run/random_shuffle/: cifar10_90_random_resnet.sh  cifar10_random_resnet.sh
image_classification_cifar10/run/train_val_split/: cifar10_90_random_resnet.sh  cifar10_random_resnet.sh
image_classification_cifar10_cnn/: EXPERIMENT_DETAILS.md  README.md  cifar10_experiment.py  data.py  example_usage.sh  model.py  requirements.txt  utils.py
image_classification_cifar10_cnn/conf/: config.yaml
image_classification_cifar10_cnn/config/: config.yaml
image_classification_cifar10_cnn/config/gold_splitter/: resnet18_splitter.yaml
image_segmentation_pascal_voc/: README.md  __init__.py  data.py  model.py  test_unit.py  unit_tests.py  utils.py  voc_experiment.py
image_segmentation_pascal_voc/config/: config.yaml
image_segmentation_pascal_voc/run/random_shuffle/: pascal_voc_90_random_deeplab.sh  pascal_voc_random_deeplab.sh
text_classification_imdb/: README.md  data.py  imdb_experiment.py  model.py  utils.py
text_classification_imdb/config/: config.yaml
text_classification_imdb/run/random_shuffle/: imdb_random_bert.sh  imdb_random_bert_red90.sh
